# something-new

./: .gitignore  Cargo.toml  plan.md
.github/workflows/: ci.yml
crates/adam_ast/: Cargo.toml
crates/adam_ast/src/: common.rs  expr.rs  item.rs  lib.rs  pattern.rs  pretty.rs  stmt.rs  types.rs
crates/adam_borrow/: Cargo.toml
crates/adam_borrow/src/: adversarial_tests.rs  checker.rs  lib.rs  ownership.rs  tests.rs
crates/adam_bridge/: Cargo.toml
crates/adam_bridge/src/: ffi.rs  lib.rs  platform.rs
crates/adam_cli/: Cargo.toml
crates/adam_cli/src/: bench.rs  compile.rs  format.rs  main.rs  manifest.rs  project.rs  testrunner.rs
crates/adam_cli/test_proj/: .gitignore  adam.toml
crates/adam_cli/test_proj/src/: main.adam
crates/adam_cli/test_proj/tests/: main_test.adam
crates/adam_codegen/: Cargo.toml
crates/adam_codegen/src/: concurrency.rs  context.rs  function.rs  lib.rs  link.rs  memory.rs  pipeline_stress_tests.rs  tests.rs  types.rs
crates/adam_codegen/src/targets/: android.rs  ios.rs  mod.rs
crates/adam_ir/: Cargo.toml
crates/adam_ir/src/: adversarial_tests.rs  ir.rs  lib.rs  lower.rs  opt.rs  print.rs  tests.rs  verify.rs
crates/adam_lexer/: Cargo.toml
crates/adam_lexer/src/: adversarial_tests.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/adam_lsp/: Cargo.toml
crates/adam_lsp/src/: analysis.rs  completion.rs  document.rs  goto.rs  hover.rs  lib.rs  protocol.rs  stress_tests.rs  symbols.rs  tests.rs
crates/adam_parser/: Cargo.toml
crates/adam_parser/src/: adversarial_tests.rs  expr.rs  item.rs  lib.rs  parser.rs  pattern.rs  stmt.rs  tests.rs  types.rs
crates/adam_resolve/: Cargo.toml
crates/adam_resolve/src/: adversarial_tests.rs  errors.rs  lib.rs  resolver.rs  scope.rs  tests.rs
crates/adam_runtime/: Cargo.toml  build.rs
crates/adam_runtime/src/: adversarial_tests.rs  alloc.rs  channel.rs  context_switch.rs  extreme_stress_tests.rs  format.rs  io.rs  lib.rs  map.rs  math.rs  print.rs  scheduler.rs  select.rs  set.rs  spawn_group.rs  string.rs  thread.rs  vec.rs
crates/adam_runtime/src/arch/: aarch64.S  x86_64.S
crates/adam_std/: Cargo.toml
crates/adam_std/src/: lib.rs  operator.rs  primitives.rs  traits.rs
crates/adam_types/: Cargo.toml
crates/adam_types/src/: adversarial_tests.rs  checker.rs  fuzz_tests.rs  lib.rs  tests.rs  ty.rs
crates/adam_ui/: Cargo.toml
crates/adam_ui/src/: animation.rs  components.rs  input.rs  layout.rs  lib.rs  render.rs  skia_backend.rs  state.rs  view.rs  vtree.rs
docs/reference/: collections.md  concurrency.md  control_flow.md  enums.md  error_handling.md  functions.md  generics.md  modules.md  ownership.md  structs.md  traits.md  variables.md  views.md
docs/tutorial/: 01_hello_world.md  02_variables_and_types.md  03_functions.md  04_control_flow.md  05_structs_and_methods.md  06_enums_and_patterns.md  07_error_handling.md  08_ownership.md  09_collections.md  10_concurrency.md  11_building_apps.md  12_platform_apis.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: adam.tmLanguage.json
examples/: calculator_app.adam  channels.adam  chat_app.adam  concurrency_demo.adam  counter.adam  enums.adam  error_handling.adam  fibonacci.adam  generics.adam  hello.adam  modules.adam  notes_app.adam  ownership.adam  structs.adam  todo_app.adam  weather_app.adam
platform/android/: build.gradle  settings.gradle
platform/android/app/: build.gradle
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/adam/runtime/: AdamActivity.java  AdamJNI.java  AdamPlatformAPIs.java  AdamSurfaceView.java
platform/android/app/src/main/res/values/: strings.xml  themes.xml
platform/android/jni/: CMakeLists.txt  adam_jni.c  apis.c
platform/ios/AdamHost/: bridge.h
platform/ios/AdamHost/AdamHost/: AdamHost-Bridging-Header.h  AdamView.swift  AppDelegate.swift  Info.plist  PlatformAPIs.swift
platform/ios/apis/: adam_platform_ios.h  adam_platform_ios.m
std/platform/: android.adam  ios.adam  mod.adam
