[package]
name = "adam_borrow"
version.workspace = true
edition.workspace = true

[dependencies]
adam_ast = { path = "../adam_ast" }
adam_types = { path = "../adam_types" }
adam_resolve = { path = "../adam_resolve" }

[dev-dependencies]
adam_lexer = { path = "../adam_lexer" }
adam_parser = { path = "../adam_parser" }
