[package]
name = "adam_cli"
version.workspace = true
edition.workspace = true

[dependencies]
adam_lexer = { path = "../adam_lexer" }
adam_ast = { path = "../adam_ast" }
adam_parser = { path = "../adam_parser" }
adam_resolve = { path = "../adam_resolve" }
adam_types = { path = "../adam_types" }
adam_borrow = { path = "../adam_borrow" }
adam_ir = { path = "../adam_ir" }
adam_codegen = { path = "../adam_codegen" }
