[package]
name = "adam_lsp"
version.workspace = true
edition.workspace = true

[dependencies]
adam_lexer = { path = "../adam_lexer" }
adam_ast = { path = "../adam_ast" }
adam_parser = { path = "../adam_parser" }
adam_resolve = { path = "../adam_resolve" }
adam_types = { path = "../adam_types" }
adam_borrow = { path = "../adam_borrow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
adam_ir = { path = "../adam_ir" }
adam_lexer = { path = "../adam_lexer" }
adam_parser = { path = "../adam_parser" }
